fix(directory): fixed text overflow

--- a/directory/src/scss/home/Home.module.scss
+++ b/directory/src/scss/home/Home.module.scss
@@ -14,6 +14,7 @@
     margin-top: 1.25rem;
     .content {
       font-size: 1.5rem;
+      max-width: 100%;
     }
     .container {
       .title {
